fix layout issue

--- a/css/grid.css
+++ b/css/grid.css
@@ -142,7 +142,7 @@
 }
 
 .cs-style-3 figcaption {
-    height: 100px;
+    min-height: 100px;
     width: 100%;
     top: auto;
     bottom: 0;
